# MSL-Simulator

./: .gitignore  Makefile  README.md  TODO  config
Docker/: Docker.docx
Docker/TestDocker/: Dockerfile  app.py  requirements.txt
documentation/: gazebo_visual.md
documentation/MSL Workshop 2018 - Aveiro/: MSL_simulator_overview.graphml
documentation/images/: architecture_overview.gv  architecture_overview.ps  connect_nok.diag  connect_nok_same_client.diag  connect_nok_spawn_unknown_team.diag  connect_nok_two_simrefs.diag  connect_ok.diag  connect_ok_multiple_observers.diag  connect_ok_simref.diag  connect_ok_two_teams.diag  despawn_nok_invalid_team.diag  despawn_nok_unknown_robot.diag  despawn_ok_known_robot.diag  message_overview.gv  message_overview.ps  overrule_ball_ok.diag  overrule_robot_nok_unknown_robot.diag  overrule_robot_nok_unknown_team.diag  overrule_robot_ok.diag  place_robot_nok_unknown_robot.diag  place_robot_not_unknown_team.diag  place_robot_ok.diag  spawn_nok_six_robots.diag  spawn_nok_unknown_team.diag  spawn_ok_non-preffered_robot.diag  spawn_ok_preffered_robot.diag  update_ground_truth_one_team.diag  update_ground_truth_one_team_adding_robot.diag  update_ground_truth_two_teams.diag  update_team_nok_less.diag  update_team_nok_much.diag  update_team_ok.diag
src/gazebo_visual/model_description/: CMakeLists.txt  package.xml
src/gazebo_visual/model_plugin/: CMakeLists.txt
